# gitnibble

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  demo.tape
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
src/: app.rs  cli.rs  config.rs  event.rs  lib.rs  main.rs  merger.rs  scanner.rs  template.rs  template_fetch.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: diff_preview.rs  header.rs  help_modal.rs  stack_panel.rs  status_bar.rs  template_list.rs  theme_preview.rs
templates/: 1Password.gitignore  Actionscript.gitignore  Ada.gitignore  Age.gitignore  Android.gitignore  Ansible.gitignore  AppEngine.gitignore  ArchLinuxPackages.gitignore  Astro.gitignore  Autotools.gitignore  Bazel.gitignore  Buck2.gitignore  Bun.gitignore  C++.gitignore  C.gitignore  CDK.gitignore  CMake.gitignore  CSharp.gitignore  CakePHP.gitignore  Carbon.gitignore  ChefCookbook.gitignore  Claude.gitignore  Clojure.gitignore  CodeIgniter.gitignore  CommonLisp.gitignore  Concrete5.gitignore  Conda.gitignore  Copilot.gitignore  Coq.gitignore  CraftCMS.gitignore  Cursor.gitignore  Cypress.gitignore  D.gitignore  DVC.gitignore  Dagger.gitignore  Dart.gitignore  Delphi.gitignore  Deno.gitignore  DevContainer.gitignore  Django.gitignore  (+113 more)
tests/: merger_tests.rs  scanner_tests.rs
